--- a/trunk/cwinux/cwinux/trunk/Makefile.in
+++ b/trunk/cwinux/cwinux/trunk/Makefile.in
@@ -169,7 +169,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 xml_expat_dir = @xml_expat_dir@
-SUBDIRS = lib/cmn/src lib/parse/src lib/store/src lib/net/src lib/poco/src lib/util/src lib/app/src  tool/blog_reader tool/mgr_client
+SUBDIRS = lib/cmn/src lib/parse/src lib/store/src lib/net/src lib/poco/src lib/util/src lib/app/src  tool/blog_reader 
 all: all-recursive
 
 .SUFFIXES:
