--- a/trunk/cwinux/example/echo/echo_client/Makefile.am
+++ b/trunk/cwinux/example/echo/echo_client/Makefile.am
@@ -13,9 +13,9 @@ cwx_echo_client_SOURCES = \
 	CwxEchoClientApp.cpp\
 	CwxEchoClientConfig.cpp
 cwx_echo_client_LDADD=
-cwx_echo_client_LDFLAGS =-L@xml_expat_dir@/lib -L@cwinux_dir@/lib -L@libevent_dir@/lib
-LIBS=-lcwxapp -lcwxnet -lcwxparse -lcwxcmn -lexpat -levent -lpthread -ldl -lrt
-INCLUDES=-I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net -I@cwinux_dir@/include/parse -I@xml_expat_dir@/include -I@libevent_dir@/include
+cwx_echo_client_LDFLAGS =-L@xml_expat_dir@/lib -L@cwinux_dir@/lib 
+LIBS=-lcwxapp -lcwxnet -lcwxparse -lcwxcmn -lexpat -lpthread -ldl -lrt
+INCLUDES=-I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net -I@cwinux_dir@/include/parse -I@xml_expat_dir@/include 
 
 ## Clean up template repositories, etc.
 clean-local:
