--- a/trunk/cwinux/example/echo/echo_svr/Makefile.in
+++ b/trunk/cwinux/example/echo/echo_svr/Makefile.in
@@ -104,7 +104,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
-LIBS = -lcwxapp -lcwxnet -lcwxparse -lcwxcmn -lexpat -levent -lpthread -ldl -lrt
+LIBS = -lcwxapp -lcwxnet -lcwxparse -lcwxcmn -lexpat -lpthread -ldl -lrt
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
@@ -156,7 +156,6 @@ includedir =
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
-libevent_dir = @libevent_dir@
 libexecdir = @libexecdir@
 localstatedir = @localstatedir@
 mandir = @mandir@
@@ -179,8 +178,8 @@ cwx_echo_SOURCES = \
 	CwxEchoEventHandler.cpp
 
 cwx_echo_LDADD = 
-cwx_echo_LDFLAGS = -L@xml_expat_dir@/lib -L@cwinux_dir@/lib -L@libevent_dir@/lib
-INCLUDES = -I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net -I@cwinux_dir@/include/parse -I@xml_expat_dir@/include -I@libevent_dir@/include
+cwx_echo_LDFLAGS = -L@xml_expat_dir@/lib -L@cwinux_dir@/lib
+INCLUDES = -I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net -I@cwinux_dir@/include/parse -I@xml_expat_dir@/include
 all: all-am
 
 .SUFFIXES:
