--- a/trunk/cwinux/cwinux/trunk/lib/cmn/src/Makefile.in
+++ b/trunk/cwinux/cwinux/trunk/lib/cmn/src/Makefile.in
@@ -320,7 +320,8 @@ cwxcmninclude_HEADERS = \
     ../include/CwxThreadPool.inl\
     ../include/CwxThreadPoolMgr.h\
     ../include/CwxTpi.h\
-    ../include/CwxTss.h 
+    ../include/CwxTss.h\
+    ../include/CwxLogger.h
 
 INCLUDES = -I$(srcdir)/../include
 all: all-am
