--- a/trunk/cwinux/project/mq/trunk/mq/Makefile.in
+++ b/trunk/cwinux/project/mq/trunk/mq/Makefile.in
@@ -53,7 +53,6 @@ am_cwx_mq_OBJECTS = cwx_mq-CwxMqTss.$(OBJEXT) \
 	cwx_mq-CwxMqDef.$(OBJEXT) cwx_mq-CwxMqQueueMgr.$(OBJEXT) \
 	cwx_mq-CwxMqApp.$(OBJEXT) cwx_mq-CwxMqConfig.$(OBJEXT) \
 	cwx_mq-CwxMqFetchHandler.$(OBJEXT) \
-	cwx_mq-CwxMqMgrServer.$(OBJEXT) \
 	cwx_mq-CwxMqAsyncHandler.$(OBJEXT) cwx_mq-cwx_mq.$(OBJEXT) \
 	cwx_mq-CwxMqMasterHandler.$(OBJEXT) \
 	cwx_mq-CwxMqRecvHandler.$(OBJEXT)
@@ -183,7 +182,7 @@ cwx_mq_SOURCES = \
         ../common/CwxMqPoco.cpp\
         ../common/CwxMqSysFile.cpp\
 	../common/CwxMqDef.cpp  ../common/CwxMqQueueMgr.cpp\
-	CwxMqApp.cpp CwxMqConfig.cpp  CwxMqFetchHandler.cpp   CwxMqMgrServer.cpp\
+	CwxMqApp.cpp CwxMqConfig.cpp  CwxMqFetchHandler.cpp\
 	CwxMqAsyncHandler.cpp  cwx_mq.cpp       CwxMqMasterHandler.cpp  CwxMqRecvHandler.cpp
 
 cwx_mq_LDADD = 
@@ -266,7 +265,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqDef.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqFetchHandler.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqMasterHandler.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqMgrServer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqPoco.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqQueueMgr.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_mq-CwxMqRecvHandler.Po@am__quote@
@@ -406,20 +404,6 @@ cwx_mq-CwxMqFetchHandler.obj: CwxMqFetchHandler.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxMqFetchHandler.cpp' object='cwx_mq-CwxMqFetchHandler.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_mq_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_mq-CwxMqFetchHandler.obj `if test -f 'CwxMqFetchHandler.cpp'; then $(CYGPATH_W) 'CwxMqFetchHandler.cpp'; else $(CYGPATH_W) '$(srcdir)/CwxMqFetchHandler.cpp'; fi`
-
-cwx_mq-CwxMqMgrServer.o: CwxMqMgrServer.cpp
-@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_mq_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_mq-CwxMqMgrServer.o -MD -MP -MF "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Tpo" -c -o cwx_mq-CwxMqMgrServer.o `test -f 'CwxMqMgrServer.cpp' || echo '$(srcdir)/'`CwxMqMgrServer.cpp; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Tpo" "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Po"; else rm -f "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxMqMgrServer.cpp' object='cwx_mq-CwxMqMgrServer.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_mq_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_mq-CwxMqMgrServer.o `test -f 'CwxMqMgrServer.cpp' || echo '$(srcdir)/'`CwxMqMgrServer.cpp
-
-cwx_mq-CwxMqMgrServer.obj: CwxMqMgrServer.cpp
-@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_mq_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_mq-CwxMqMgrServer.obj -MD -MP -MF "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Tpo" -c -o cwx_mq-CwxMqMgrServer.obj `if test -f 'CwxMqMgrServer.cpp'; then $(CYGPATH_W) 'CwxMqMgrServer.cpp'; else $(CYGPATH_W) '$(srcdir)/CwxMqMgrServer.cpp'; fi`; \
-@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Tpo" "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Po"; else rm -f "$(DEPDIR)/cwx_mq-CwxMqMgrServer.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxMqMgrServer.cpp' object='cwx_mq-CwxMqMgrServer.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_mq_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_mq-CwxMqMgrServer.obj `if test -f 'CwxMqMgrServer.cpp'; then $(CYGPATH_W) 'CwxMqMgrServer.cpp'; else $(CYGPATH_W) '$(srcdir)/CwxMqMgrServer.cpp'; fi`
 
 cwx_mq-CwxMqAsyncHandler.o: CwxMqAsyncHandler.cpp
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_mq_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_mq-CwxMqAsyncHandler.o -MD -MP -MF "$(DEPDIR)/cwx_mq-CwxMqAsyncHandler.Tpo" -c -o cwx_mq-CwxMqAsyncHandler.o `test -f 'CwxMqAsyncHandler.cpp' || echo '$(srcdir)/'`CwxMqAsyncHandler.cpp; \
