--- a/trunk/cwinux/example/echo/configure.in
+++ b/trunk/cwinux/example/echo/configure.in
@@ -67,3 +67,4 @@ AC_SUBST(cwinux_dir)
 AC_OUTPUT(Makefile)
 AC_OUTPUT(echo_client/Makefile)
 AC_OUTPUT(echo_svr/Makefile)
+AC_OUTPUT(echo_channel_svr/Makefile)
