--- a/trunk/cwinux/example/echo/Makefile.in
+++ b/trunk/cwinux/example/echo/Makefile.in
@@ -169,7 +169,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 xml_expat_dir = @xml_expat_dir@
-SUBDIRS = echo_client echo_svr 
+SUBDIRS = echo_client echo_svr echo_channel_svr
 all: all-recursive
 
 .SUFFIXES:
