--- a/trunk/cwinux/cwinux/trunk/lib/util/src/Makefile.am
+++ b/trunk/cwinux/cwinux/trunk/lib/util/src/Makefile.am
@@ -8,13 +8,15 @@ libcwxutil_la_CPPFLAGS = -W -Wall
 
 libcwxutil_la_SOURCES = \
 	CwxDayLogger.cpp\
-	CwxMd5.cpp
+	CwxMd5.cpp\
+	CwxCrc32.cpp
 libcwxutil_la_LDFLAGS = 
 
 cwxutilincludedir=$(prefix)/include/util
 cwxutilinclude_HEADERS=\
 	../include/CwxDayLogger.h\
 	../include/CwxMd5.h\
+	../include/CwxCrc32.h\
 	../include/CwxUtilMacro.h
 	
 INCLUDES=-I$(srcdir)/../include -I$(srcdir)/../../cmn/include -I$(srcdir)/../../net/include -I$(srcdir)/../../parse/include
